# OpenGL-Template

./: CMakeLists.txt  README.md
Scripts/: build.sh  run.sh
Source/: Application.cpp  Application.h  main.cpp
Source/Shader/: ShaderLoader.cpp
Source/System/: Config.h  Context.cpp  Context.h
Source/glad/: glad.c  glad.h
